# google_goggles_project

./: .gitignore  .hgignore  CMakeLists.txt  cmds.txt  manifest.xml
doc/: notebook.zim
example/: server_example.py
google_goggles/: cmds.txt  mainpage.dox  manifest.xml
google_goggles/launch/: prosilica.launch
google_goggles/scripts/: bag_play.py  call_pose_estimation.py  contact_cloud.py  pipeline.py  recorder  run_dense_image_tests.sh  run_image_tests.sh  save_data.py  test_images.py  test_images_new.py
google_goggles/scripts/util/: bag_play  display_grasps.py
google_goggles/src/: config.h  convert_cloud.cpp  google_goggles_connector.py  grasper.py  image_converter.py  image_tester.py  object_loader.py  object_recognition.py  object_recognition_tester.py  objreco.py  pose_estimator.cpp
google_goggles/src/tracker/: cloud_ops.cpp  table.cpp  table_config.cpp  tracker.cpp  tracker.h  tracker_ros.cpp  tracker_ros.h
google_goggles/wiki/: Pose_estimation.txt  ROS_structure.txt  notebook.zim
google_goggles_msgs/: mainpage.dox  manifest.xml
google_goggles_msgs/msg/: ObjectData.msg  ObjectReferenceData.msg
google_goggles_srvs/: mainpage.dox  manifest.xml
google_goggles_srvs/srv/: AlignCloud.srv  AlignObject.srv  CreateMesh.srv
graspit/dbase_grasp_planner/: CMakeLists.txt  dbase_grasp_planning.make  dbase_grasp_planning.pro  manifest.xml
graspit/dbase_grasp_planner/include/dbase_grasp_planner/: grasp_planning_task.h
graspit/dbase_grasp_planner/launch/: db_graspit.launch
graspit/dbase_grasp_planner/src/: dbase_planner_plugin.cpp  grasp_planning_task.cpp
graspit/graspit/: CMakeLists.txt  Makefile.graspit.source  manifest.xml
graspit/graspit/graspit_source/: Makefile  graspit-core.pro  graspit-lib-LINUX.pro  graspit.pro  qmake_image_collection.cpp
graspit/graspit/graspit_source/src/DBase/DBPlanner/: db_manager.h  inmemory_database_manager.cpp  inmemory_database_manager.h  ros_database_manager.cpp  task.h
graspit/graspit/graspit_source/ui/: qmake_image_collection.cpp  ui_about.h  ui_archBuilderDlg.h  ui_barrettHandDlg.h  ui_bodyPropDlg.h  ui_compliantPlannerDlg.h  ui_contactExaminerDlg.h  ui_dbaseDlg.h  ui_dbasePlannerDlg.h  ui_egPlannerDlg.h  ui_eigenGraspDlg.h  ui_gfoDlg.h  ui_gloveCalibrationDlg.h  ui_graspCaptureDlg.h  ui_gwsProjDlgBase.h  ui_mainWindow.h  ui_optimizerDlg.h  ui_plannerdlg.h  ui_qmDlg.h  ui_qualityIndicator.h  ui_settingsDlg.h
graspit/graspit_dbase_tasks/: CMakeLists.txt  manifest.xml
graspit/graspit_dbase_tasks/include/graspit_dbase_tasks/: dbTask.h  dbTaskDispatcher.h
graspit/graspit_dbase_tasks/src/: dbTaskDispatcher.cpp
graspit/graspit_srvs/: manifest.xml
graspit/graspit_srvs/srv/: GenerateGrasps.srv  TestGrasps.srv
launch/: prosilica.launch
scripts/: contact_cloud.py  contact_cloud_with_file.py  flip_and_center_cloud.py  pcd_to_mesh.sh  process_ref_cloud.py  repub_cloud.py  show_image.py  take_images.py  test_images.py
src/: build_ref_point_cloud.cpp  cloud_ops.cpp  cloud_ops.h  dist_math.cpp  dist_math.h  google_goggles_connector.py  grasper.py  icp_test.cpp  image_tester.py  image_testing.py  object_loader.py  objreco.py  pcd_read.cpp  plane_finding.cpp  point_cloud_grasper.cpp  point_cloud_to_mesh.cpp  pose_estimator.cpp  process_ref_point_cloud.cpp  select_grasp.cpp  table_config.cpp  tracker.cpp  tracker.h  tracker_ros.cpp  tracker_ros.h  tracker_server.cpp  utils_pcl.h
src/tracker/: cloud_ops.cpp  cloud_ops.h  config.cpp  config.h  table.cpp  table.h  table_config.cpp  table_config.h  tracker.cpp  tracker_ros.cpp  utils_pcl.cpp
